Completato il primo modulo.

--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ body{
 
 /* fine della prima parte del modulo, image-container. */
 
-/*inizio della seconda parte del modulo, text-container */
+/*inizio della seconda parte del modulo, text-container. */
 
 .text-container{
     width: 256px;
